# AI4Math-Optimization

./: .agent.md  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTORS.md  GEMINI.md  LICENSE  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
.codex/: INSTALL.md
.opencode/: INSTALL.md
LP-Skill/: README.md  SKILL.md
MIP-Skill/: README.md  SKILL.md
OR_SOLVER-Skill/: README.md  SKILL.md
SOCP-Skill/: README.md  examples.md
cdopt-optimization/references/: INDEX.md  cdopt_official_examples.md  example_prompts.md
cdopt-optimization/scripts/: write_constrained_layer_runner.py  write_stiefel_dictionary_runner.py
cdopt-skill/: SKILL.md
cdopt-skill/agents/: openai.yaml
cdopt-skill/references/: example_prompts.md
examples/: cdopt-example-prompts.md  cdopt-example-prompts.zh-CN.md  lp-milp-example-prompts.md  lp-milp-example-prompts.zh-CN.md  lp-milp-problem-specs.md
skills/cdopt-optimization/: README.md  README.zh-CN.md  SKILL.md
skills/copt-linear-program/: readme.md  test-prompts.md
skills/linear-programming/: SKILL.md  examples.md
skills/mixed-integer-programming/: README.md
skills/optimization-modeling/: SKILL.md  manifest.yaml
skills/optimization-modeling-skill/: SKILL.md  manifest.yaml
skills/optimization-skill/: SKILL.md  manifest.yaml
skills/optimization-solver-skill/: SKILL.md  manifest.yaml
skills/or-solver/: README.md  examples.md
skills/second-order-cone-programming/: README.md  SKILL.md
tests/: conftest.py  test_cdopt_skill_shape.py  test_optimization_modeling_skill.py  test_optimization_solver_skill.py
(+76 files in other folders)
