[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optimization-solver-skill"
version = "0.1.0"
description = "Coding-agent-facing Skill for optimization solver modeling, routing, code generation, execution evidence, and failure diagnosis."
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
