[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optimization-modeling"
version = "0.2.0"
description = "Coding-agent-facing Skill for optimization modeling, solver routing, code generation, execution evidence, and failure diagnosis."
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
